--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 .darts {
-    width: 32.5rem;
+    width: 100rem;
     height: 52rem;
     background-color: #3296a3;
     box-shadow: 0 0.5rem 3rem rgba(0,0, 0, 0.5);
@@ -29,11 +29,11 @@ html {
 .fixplayer {
     width: 100%;
     display: flex;
-    justify-content:center;
+    justify-content: center;
 }
 
 .fixplayer button {
-    width: calc(32.5rem/2);
+    width: 100%;
     height: 5rem;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.8);
@@ -112,11 +112,58 @@ html {
     text-align: center;
 }
 
+.realplayer p{
+   font-size: 3rem;
+   font-weight: 600;
+   color: rgb(255, 253, 240);
+   text-shadow: 0 0.3rem 0.5rem rgb(145, 119, 50);
+}
+
+
 .realplayer i:hover {
     box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
     cursor: pointer;
 }
 
+.table {
+    width: 70%;
+    display: flex;
+    justify-content: center;
+}
+
+.name {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    font-size: 3rem;
+    flex-basis: 1;
+}
+
+.rounds {
+    width: 100%;
+    
+}
+
+.rounds .round {
+    width: 100%;
+    display: flex;
+    flex-basis: 1;
+    justify-content: space-around;
+    align-items: center;
+    flex: 1;
+    font-size: 2.5rem;
+}
+.name div,
+.round div {
+    width: 4rem;
+    
+}
+
+.target {
+    color: rgb(213, 223, 124);
+    font-weight: 500;
+    text-shadow: 0 0.3rem 0.5rem rgba(0,0, 0, 0.5);
+}
 
 @media screen and (max-width: 1090px) {
     .darts {
@@ -127,3 +174,10 @@ html {
     }
 }
 
+.all ul {
+    display: flex;
+    justify-content:flex-start;
+}
+.all li {
+    width: 10%;
+}
